--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,18 @@
-
-/* ==== Scroll down to find where to put your styles :) ==== */
-
 /*  HTML5 ✰ Boilerplate  */
 
+/* font imports */
 @font-face { 
 	font-family: "ProximaNova";
 	src: url("fonts/ProximaNova-Regular.otf");
-}
+  }
 
 @font-face { 
 	font-family: "ProximaNovaBold";
 	src: url("fonts/ProximaNova-Bold.otf");
-}
+  }
 
 
-
-
+/* css resets */
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp,
@@ -31,12 +28,12 @@ time, mark, audio, video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-}
+  }
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
-}
+  }
 
 blockquote, q { quotes: none; }
 blockquote:before, blockquote:after,
@@ -94,38 +91,30 @@ h1, h2, h3, h4, h5, h6 { font-weight: bold; }
 a, a:active, a:visited { color: #607890; }
 a:hover { color: #036; }
 
-/*
-    // ========================================== \\
-   ||                                              ||
-   ||               Your styles !                  ||
-   ||                                              ||
-    \\ ========================================== //
-*/
 
+/* Start Styles */
 body{
 	font-family: "ProximaNovaBold", Helvetica, Arial, sans-serif;
 	font-size: 100px;
-}
+  }
 
 #thebasicshadow{
 text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
-}
-
+  }
 
 #quickanddirtyletterpress{
-    background: #222;
-    color: rgba(0,0,0,0.6);
-    text-shadow: 2px 2px 3px rgba(255,255,255,0.1);
-}
+  background: #222;
+  color: rgba(0,0,0,0.6);
+  text-shadow: 2px 2px 3px rgba(255,255,255,0.1);
+  }
 
 #hardshadow{
-text-shadow: 6px 6px 0px rgba(0,0,0,0.2);
-}
+  text-shadow: 6px 6px 0px rgba(0,0,0,0.2);
+  }
 
 .doubleshadow{
-text-shadow: 4px 3px 0px #fff, 8px 7px 0px rgba(0,0,0,0.15);
-}
-
+  text-shadow: 4px 3px 0px #fff, 8px 7px 0px rgba(0,0,0,0.15);
+  }
 
 .char2 { margin-left: -0.25em }
 .char3 { margin-left: -0.28em }
@@ -135,114 +124,40 @@ text-shadow: 4px 3px 0px #fff, 8px 7px 0px rgba(0,0,0,0.15);
 .char9 { margin-left: -0.24em }
 .char10 { margin-left: -0.23em }
 
-
-
-
-
 #downanddistant{
-    text-shadow: 0px 3px 0px #b2a98f,
-                 0px 14px 10px rgba(0,0,0,0.15),
-                 0px 24px 2px rgba(0,0,0,0.1),
-                 0px 34px 30px rgba(0,0,0,0.1);
-}
+  text-shadow: 0px 3px 0px #b2a98f,
+  }
 
 #closeandheavy{
-text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
-             0px 8px 13px rgba(0,0,0,0.1),
-             0px 18px 23px rgba(0,0,0,0.1);
-}
+  text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+  }
 
 #seriously3d{
-text-shadow: 0 1px 0 #ccc, 
-               0 2px 0 #c9c9c9,
-               0 3px 0 #bbb,
-               0 4px 0 #b9b9b9,
-               0 5px 0 #aaa,
-               0 6px 1px rgba(0,0,0,.1),
-               0 0 5px rgba(0,0,0,.1),
-               0 1px 3px rgba(0,0,0,.3),
-               0 3px 5px rgba(0,0,0,.2),
-               0 5px 10px rgba(0,0,0,.25),
-               0 10px 10px rgba(0,0,0,.2),
-               0 20px 20px rgba(0,0,0,.15);
-}
+  text-shadow: 0 1px 0 #ccc, 
+  }
 
 #trueinsettext{
-background-color: #666666;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    text-shadow: rgba(255,255,255,0.5) 0px 3px 3px;
-}
+  background-color: #666666;
+  -webkit-background-clip: text;
+     -moz-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  text-shadow: rgba(255,255,255,0.5) 0px 3px 3px;
+  }
 
 #glowing{
-text-shadow: 0px 0px 6px rgba(255,255,255,0.7);
-}
+  text-shadow: 0px 0px 6px rgba(5,5,5,0.7);
+  }
 
 #superhero{
-text-shadow: -10px 10px 0px #00e6e6,
-                 -20px 20px 0px #01cccc,
-                 -30px 30px 0px #00bdbd;
-}
+  text-shadow: -10px 10px 0px #00e6e6,
+  }
 
 #multiplelightsources{
-text-shadow: 0px 15px 5px rgba(0,0,0,0.1),
-                 10px 20px 5px rgba(0,0,0,0.05),
-                 -10px 20px 5px rgba(0,0,0,0.05);
-}
+  text-shadow: 0px 15px 5px rgba(0,0,0,0.1),
+  }
 
 #softemboss{
-color: rgba(0,0,0,0.6);
-text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
-             0px -5px 35px rgba(255,255,255,0.3);
-}
-
-
-
-
-
-
-
-
-
-
-.ir { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; text-align: left; direction: ltr; }
-.hidden { display: none; visibility: hidden; }
-.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
-.invisible { visibility: hidden; }
-.clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; overflow: hidden; }
-.clearfix:after { clear: both; }
-.clearfix { zoom: 1; }
-
-
-@media all and (orientation:portrait) {
-
-}
-
-@media all and (orientation:landscape) {
-
-}
-
-@media screen and (max-device-width: 480px) {
-
-  /* html { -webkit-text-size-adjust:none; -ms-text-size-adjust:none; } */
-}
-
-
-@media print {
-  * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important;
-  -ms-filter: none !important; } 
-  a, a:visited { color: #444 !important; text-decoration: underline; }
-  a[href]:after { content: " (" attr(href) ")"; }
-  abbr[title]:after { content: " (" attr(title) ")"; }
-  .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; }  
-  pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
-  thead { display: table-header-group; }
-  tr, img { page-break-inside: avoid; }
-  @page { margin: 0.5cm; }
-  p, h2, h3 { orphans: 3; widows: 3; }
-  h2, h3{ page-break-after: avoid; }
-}
+  color: rgba(0, 0, 0, 0.6);
+  text-shadow: 2px 8px 6px rgba(0, 0, 0, 0.2), 0px -5px 35px rgba(255, 255, 255, 0.3);
+  }
